--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,11 @@ color: #000000 !important;
   
   margin-left: 20px;/* Sobrescribe el color de texto */
   }
+
+  .custom-header {
+    background-color: #1E88E5 !important; /* Azul diferente */
+    color: #ffffff !important;
+  }
 /*Boton Perszonalizado*/
 .icono-dorado {
   color: gold !important; /* Color dorado */
@@ -1092,7 +1097,6 @@ color: white;
 }
 
 .modal-key-card-body {
-  background-image: url('<?php echo base_url(); ?>img/portal_icon.png');
   background-size: cover; /* Hace que la imagen cubra todo el contenedor */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Previene la repetición de la imagen */
@@ -1372,4 +1376,8 @@ color: white;
   flex: 1; /* Para que ambos div ocupen el mismo espacio */
   max-width: 50%; /* Asegura que no sobrepasen la mitad */
   overflow: auto; /* Para manejar contenido extenso */
+}
+.custom-btn.active {
+  background-color: #007bff; /* o el color de hover que uses */
+  color: white;
 }
