--- a/css/custom.css
+++ b/css/custom.css
@@ -1004,6 +1004,9 @@ color: white;
 .modal-title-modal-key-title-blanco{
   color: white!important;
 }
+.modal-title{
+  color: white!important;
+}
 /* Modal general */
 .modal-key-content {
   border-radius: 8px;
@@ -1380,4 +1383,20 @@ color: white;
 .custom-btn.active {
   background-color: #007bff; /* o el color de hover que uses */
   color: white;
+}
+#dz-previews .dz-preview {
+    display: table-row !important;
+    background: none !important;
+    border: none !important;
+}
+
+#visorWrap img,
+#visorWrap video,
+#visorWrap embed {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;     /* imágenes / vídeos */
+  border: none;
 }
