--- a/css/custom.css
+++ b/css/custom.css
@@ -1591,4 +1591,9 @@ color: white;
   overflow-y: auto;
 }
 
-
+/* Tamaño base de la "bandera" */
+.lang-flag-img {
+  width: 22px;       /* ajusta a tu gusto */
+  height: auto;
+  display: inline-block;
+}
