cambios  para  registro de candidatos  hacia  RODI

--- a/css/custom.css
+++ b/css/custom.css
@@ -965,7 +965,7 @@ color: white;
 }
 /* Asegurarse de que el contenido no se oculte detrás del sidebar */
 #content {
-  transition: margin-left 0.3s ease; /* Suaviza la animación cuando el sidebar se abre o cierra */
+  padding-top: 0 !important;/* Suaviza la animación cuando el sidebar se abre o cierra */
 }
 
 /* Ocultar el contenido en pantallas pequeñas */
@@ -1403,11 +1403,15 @@ color: white;
   background-color: rgba(16, 16, 16, 0.397); /* Color de la barra de separación */
   z-index: 0; /* Asegura que la barra de separación esté detrás del botón */
 }
-
+.navbar.topbar {
+  padding-left: 1px !important;
+}
 /* Resaltar el botón activo */
 .custom-btn.active {
   background-color: rgba(54, 91, 131, 0.968); /* Color de fondo del botón activo */
   color: white; /* Color del texto del botón activo */
+  margin-left: 0 !important;
+  padding-left: 0 !important;
 }
 
 /* Estilo para el contenedor de botones */
@@ -1668,7 +1672,11 @@ body.sidebar-toggled #accordionSidebar .sidebar-divider {
 body.sidebar-toggled #content-wrapper {
   margin-left: 6.5rem !important;
 }
-
+.topbar {
+  margin-bottom: 1px !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
 /* ===============================
    PERFIL CENTRADO EN SIDEBAR COLLAPSED
 ================================ */
